#### Don't forget to change the version number in configure.ac! ####

04 May 2004 cckdbuf.pat - cckd fixes - Greg Smith
17 Apr 2004 Correct merged PER guest interrupt propagation - Jan Jaeger
10 Apr 2004 Use signal shutdown on quit - Jan Jaeger
09 Apr 2004 PMCW QDIO bit no longer reserved - Jan Jaeger
08 Apr 2004 QDIO device handler changes - Jan Jaeger
08 Apr 2004 Correct false PIC 04 on TRAP2/4 instructions - Jan Jaeger
04 Apr 2004 Undo change 14 May - Bernard van der Helm
30 Mar 2004 Add debug entry point for watchdog signal - Jan Jaeger
26 Mar 2004 Program old PSW fix (ESAME) - Jan Jaeger
25 Mar 2004 Program old PSW fix (S/390) - Jan Jaeger
24 Mar 2004 More of Greg's CLC improvements + no direct SK manipulation
            when dealing with non-crossing MVCs - Ivan Warren
22 Mar 2004 Fix DXC codes in ieee.c - Jan Jaeger
21 Mar 2004 Fix false PIC 04's under SIE - Jan Jaeger
18 Mar 2004 re-enable ECPS:VM + VTIMER fix - Ivan Warren
17 Mar 2004 clc.pat - Optimize CLC - Ivan & Greg - Greg Smith
17 Mar 2004 l2m.pat - Tweaks to logical_to_main - Greg Smith
17 Mar 2004 protected.pat - Optimization for is_fetch_protected - Greg Smith
17 Mar 2004 prefixing.pat - Optimize APPLY_PREFIXING using xor - Greg Smith
14 Mar 2004 tlb1024.pat - Increase TLB size to 1024 - Greg Smith
14 Mar 2004 permode.pat - bit check for PER mode - Greg Smith
14 Mar 2004 maddr.pat - virtual address translation returns mainstor
            address - Greg Smith
11 Mar 2004 CLC performance improvement - Ivan Warren
10 Mar 2004 Changed MAXTTR in DASDLOAD.C to 50000 - Volker Bandke
08 Mar 2004 Optimised non crossing/non overlap MVCs with length
            2,4,8,12 and 16 - Ivan Warren
06 Mar 2004 RR, RRE, RRF_* macro optimalization - Bernard van der Helm
05 Mar 2004 Restructure loadparm handling - Jan Jaeger
05 Mar 2004 Fix locking during ipl from web interface - Jan Jaeger
05 Mar 2004 LPAR name restructure - Jan Jaeger
05 Mar 2004 Initialize loadparm to blanks instead of dots - Jan Jaeger